crates/toml/tests/snapshots/invalid/spec-1.0.0/keys-2.stderr
TOML parse error at line 1, column 1
  |
1 | = "no key name"  # INVALID
  | ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
